--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-slider-component": "^4.1.0-beta.7",
     "vuetify": "^3.7.16"
   },
   "devDependencies": {
