--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.3",
     "fuse.js": "^7.1.0",
     "pinia": "^3.0.1",
+    "v-click-outside": "^3.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-slider-component": "^4.1.0-beta.7",
